# HaMinitel

./: HaMinitel.cabal  README.md
Minitel/: Constantes.hs  Constants.hs  Generateur.hs  Generator.hs  Key.hs  MString.hs  Minitel.hs  Queue.hs  Sequence.hs
example/: bookMinitel.hs  demoJPEG.hs  minitelListener.hs  simpleForm.hs  testInterface.hs  testMString.hs  testMinitel.hs
example/demoJPEG/: demoJPEG.hs
example/helloWorld/: helloWorld.hs
example/simpleForm/: simpleForm.hs
src/Minitel/: Constants.hs  Generator.hs  Key.hs  MDesign.hs  MNatural.hs  MString.hs  MUnicode.hs  Minitel.hs  Queue.hs
src/Minitel/Constants/: ANSI.hs  ASCII.hs  Abilities.hs  Accents.hs  C0.hs  CSI.hs  CharacterSet.hs  Constants.hs  Keyboard.hs  MUnicode.hs  PSCFS.hs  Photo.hs  Protocol.hs  SSCFS.hs
src/Minitel/Generate/: Configuration.hs  Generator.hs  MDesign.hs  PhotoVideotex.hs
src/Minitel/Generate/Photo/: Parameter.hs  To87.hs
src/Minitel/Type/: Ability.hs  MLargeNumber.hs  MNatural.hs  MString.hs  Queue.hs  Videotex.hs
src/Minitel/UI/: Dispatcher.hs  Interface.hs  Label.hs  Signal.hs  TextField.hs  Widget.hs
test/: testMNat.hs  testMain.hs
