name:                HaMinitel
version:             0.1.1
synopsis:            An Haskell library to drive the french Minitel through a
                     serial port
description:         HaMinitel allows you to drive a french Minitel through a
                     serial port in Haskell. It has been started as a mean to
                     discover Haskell and functional programming.
homepage:            https://github.com/Zigazou/HaMinitel
license:             GPL-3
license-file:        LICENSE
author:              Frédéric BISSON
maintainer:          zigazou@free.fr
category:            Terminal
build-type:          Simple
cabal-version:       >=1.8

source-repository head
    type: git
    location: https://github.com/Zigazou/HaMinitel

library
    ghc-options:     -Wall
                     -fwarn-incomplete-patterns
                     -fwarn-incomplete-uni-patterns
                     -fno-warn-unused-do-bind
    exposed-modules: Minitel.Generate.MDesign
                     Minitel.Generate.Generator
                     Minitel.Generate.Configuration
                     Minitel.UI.Dispatcher
                     Minitel.UI.Label
                     Minitel.UI.Widget
                     Minitel.UI.Signal
                     Minitel.UI.TextField
                     Minitel.UI.Interface
                     Minitel.Type.MString
                     Minitel.Type.MNatural
                     Minitel.Type.Queue
                     Minitel.Type.Videotex
                     Minitel.Type.Ability
                     Minitel.Minitel
                     Minitel.Constants.Abilities
                     Minitel.Constants.Constants
                     Minitel.Constants.MUnicode
                     Minitel.Key
    build-depends: QuickCheck -any, base >= 4, bytestring -any,
                   serialport >= 0.4, stm >= 2.4, mtl >= 2.2, split >= 0.2
    exposed: True
    buildable: True
    hs-source-dirs: src

test-suite testMain
    build-depends: QuickCheck -any, base >= 4, bytestring -any,
                   serialport >= 0.4, stm >= 2.4, mtl >= 2.2, split >= 0.2
    type: exitcode-stdio-1.0
    main-is: testMain.hs
    buildable: True
    hs-source-dirs: src test
